# draftsmith_textual

./: .gitignore  .gitmodules  README.md  api.py  docs.md  eg.py  fzf.py  main.py  markdown_preview.py  note_managers.py  note_viewer.py  notes_css.css  popup.py  pyproject.toml  tab_manager.py  tui.py
