[tool.poetry]
name = "draftsmith-tui"
version = "0.1.0"
description = "A TUI for draftsmith with markdown preview support"
authors = ["ryan <exogenesis@protonmail.com>"]
license = "GPL"
readme = "README.md"
packages = [{include = "*.py"}]

[tool.poetry.scripts]
ds-tui = "main:app"
ds-preview = "markdown_preview:app"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
textual = "^0.85.2"
python-levenshtein = "^0.26.1"
pyside6 = "^6.8.0.2"
rich = "^13.9.4"
typer = "^0.13.0"
pydantic = "^2.9.2"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.3"
vulture = "^2.13"
pytest = "^8.3.3"
pyright = "^1.1.389"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
